--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 /* global styles */
 
 :root{
-    --gradeGR:#700f0f;
-    --gradePIN:#ff0000;
+    --gradeGR:#e0e0e0;
+    --gradePIN:#000000;
 }
 
 
